[package]
name = "yakudo_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive"] }
image = "0.24.6"
opencv = { version = "0.78.2", default-features = false, features = ["imgproc", "imgcodecs"] }
reqwest = "0.11.16"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
